# T3000Webview

./: .env.example  .eslintrc.js  .gitignore  README.md  T3000_DATABASE_FINAL_DOCUMENTATION.md  TODO.md  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  quasar.config.js  quasar.extensions.json  revnotes.docx  revnotes.md  test-time-window.js  tsconfig.json  tsconfig.node.json  vitest.config.mjs
api/: .env-example  .gitignore  Cargo.toml  README.md  build.rs  data_management_IMPLEMENTATION.md  data_management_README.md  setting.ini  test-ffi.bat
api/Database/: t3_device.db  trendlog_database.db  webview_database.db  webview_t3_device.db  webview_t3_device.db.backup_20251028_225732  webview_t3_device.db.bak_26041901  webview_t3_device.db.bak_26042301
api/api/Database/: webview_t3_device.db
api/examples/: run_server.rs  test_dual_database.rs
api/migration/: Cargo.toml
api/migration/sql/: T3000_final_schema.sql  create_t3_device_db.sql  create_t3_device_db_enhanced.sql  modbus_register.sql  webview_t3_device_mssql.sql  webview_t3_device_mysql.sql  webview_t3_device_postgres.sql  webview_t3_device_schema.sql  webview_t3_device_schema_old.sql
api/migration/src/: lib.rs  m20240401_215840_create_tables.rs  m20240404_213650_update_tables.rs  m20240418_145628_add_devices_table.rs  m20240519_114859_update_files_table.rs  m20250122_000000_data_management_schema.rs  m20250807_000000_create_trendlog_schema.rs  m20250807_000001_create_t3_device_database.rs  m20250807_000002_create_schedules_and_trending.rs  m20250807_000003_create_indexes_and_data.rs  m20251222_add_lcd_options.rs  m20260403_add_raw_calibration_fields.rs  m20260521_add_flow_log_tables.rs  m20260529_add_haystack_entity_table.rs  m20260529_add_trendlog_point_sets_table.rs  m20260604_add_app_log_table.rs  m20260604_add_backend_and_registry_tables.rs  m20260607_add_haystack_v2.rs  m20260607_haystack_v2.rs  m20260607_remove_haystack_v1.rs  m20260611_add_device_online_status.rs
api/migrations/: 001_initial_schema.sql  20240210040246_modbus-register-items.up.sql  20240210040246_modbus-register.down.sql  20240210040246_modbus-register.up.sql  20240227193934_modbus-register-settings.down.sql  20240227193934_modbus-register-settings.up.sql  20240228181258_user.down.sql  20240228181258_user.up.sql  20240326113333_update_tables.down.sql  20240326113333_update_tables.up.sql  20240326113333_user_add_pull_column.down.sql  20240326113333_user_add_pull_column.up.sql
api/migrations/2024-02-04-222322_create_item/: down.sql  up.sql
api/src/: app_state.rs  auth.rs  central_db_writer.rs  constants.rs  create_t3_db.rs  data_sync.rs  db_connection.rs  db_schema.rs  device_db_conn.rs  error.rs  extra_models.rs  ini_config.rs  lib.rs  logger.rs  main.rs  models.rs  queries.rs  schema.rs  server.rs  server_db_writer.rs  test_migration_safety.rs  trendlog_migration.rs  utils.rs  verify_db_isolation.rs  web_routing.rs
api/src/data_management/: api_handlers.rs  api_handlers_backup.rs  api_handlers_simple.rs  collector.rs  collector.rs.corrupted  database_test.rs  demo.rs  integration_test.rs  manager.rs  manager.rs.backup  manager_fixed.rs  mod.rs  simple_test.rs  test_runner.rs  types.rs  types.rs.backup  types_fixed.rs  working_demo.rs
api/src/database_management/: config_api.rs  data_sync_endpoints.rs  data_sync_service.rs  db_backend_config.rs  db_backend_routes.rs  endpoints.rs  mod.rs  mssql_generic_crud.rs  mssql_queries.rs  mssql_trendlog_service.rs  network_scan.rs  partition_monitor_service.rs  partition_query_service.rs  registry_service.rs  sync_health.rs
api/src/entity/: application_config_history.rs  application_settings.rs  data_sync_metadata.rs  database_files.rs  database_partition_config.rs  database_partitions.rs  db_backend_config.rs  files.rs  mod.rs  modbus_register.rs  modbus_register_device_name_id_mapping.rs  modbus_register_devices.rs  modbus_register_product_device_mapping.rs  modbus_register_settings.rs  prelude.rs  server_client_registry.rs  system_logs.rs  user.rs
api/src/ffi/: t3000_ffi.cpp  t3000_ffi.h
api/src/file/: routes.rs
api/src/log/: mod.rs
api/src/logging/: flow.rs  flow_api.rs  mod.rs  policy.rs  service.rs  sinks.rs  types.rs
api/src/modbus_register/: device_name_id_mappings.rs  devices.rs  inputs.rs  mod.rs  models.rs  product_device_mappings.rs  queries.rs  routes.rs  settings.rs  settings_queries.rs
api/src/t3_develop/: mod.rs  mod_simple.rs
api/src/t3_device/: action17_refresh_helper.rs  alarm_refresh_routes.rs  alarms_update_routes.rs  arrays_refresh_routes.rs  arrays_update_routes.rs  auto_sync.rs  auto_sync_simple.rs  constants.rs  conversion_tables_refresh_routes.rs  conversion_tables_update_routes.rs  custom_units_refresh_routes.rs  custom_units_update_routes.rs  data_collector.rs  database_bridge_service.rs  email_settings_routes.rs  expansion_io_routes.rs  graphics_batch_routes.rs  graphics_refresh_routes.rs  graphics_update_routes.rs  haystack_routes.rs  haystack_service.rs  haystack_tags_routes.rs  haystack_tags_service.rs  holiday_refresh_routes.rs  holidays_batch_routes.rs  holidays_update_routes.rs  input_batch_routes.rs  input_refresh_routes.rs  input_update_routes.rs  logging_data_service.rs  migrate_trendlog_split.rs  mod.rs  multi_device_tests.rs  output_batch_routes.rs  (+55 more)
api/tests/: .test.env  ffi_comparison_test.rs  ffi_integration_tests.rs  ffi_test.rs  ffi_test_helper.rs  modbus_queries_tests.rs  multi_device_integration_tests.rs  run_server_tests.rs  service_integration_tests.rs  service_status.rs  simple_ffi_demo.rs  test_database.db  trend_data_tests.rs  trendlog_monitor_integration_test.rs  unit_mapping_tests.rs  user_and_auth_tests.rs
(+2131 files in other folders)
