[package]
name = "t3_webview_api"
version = "0.8.1"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "t3_webview_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7.7", features = ["multipart", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
strum_macros = "0.26.1"
serde_with = "3.11.0"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
open = "5.1.2"
chrono = "0.4.37"
mime_guess = "2.0.4"

migration = { path = "migration" }

# ============================================================================
# ABSTRACTED DEPENDENCIES - T3000 WebSocket and enhanced functionality
# ============================================================================

# WebSocket support for T3000 real-time communication
tokio-tungstenite = "0.21.0"
futures = "0.3"
futures-util = "0.3"

# T3000 data management and error handling
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
once_cell = "1.19.0"

# Windows API for runtime function loading
winapi = { version = "0.3", features = ["libloaderapi", "winnt"] }

# SQLite support for T3000 C++ database access (use compatible version with sea-orm)
rusqlite = { version = "0.29.0", features = ["bundled"] }

# ============================================================================
# CENTRALIZED DATABASE - Backend connectivity and security
# ============================================================================
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
tokio-util = { version = "0.7", features = ["compat"] }
aes-gcm = "0.10"
base64 = "0.22"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dependencies.sea-orm]
version = "1.0.0"
features = [
  "runtime-tokio",
  "sqlx-postgres",
  "sqlx-mysql",
  "sqlx-sqlite",
]

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }

[build-dependencies]
cc = "1.0"

[profile.release]
strip = false  # Disabled - was causing FFI symbol issues
opt-level = 2  # Changed from "z" to 2 for better compatibility
lto = false  # Disabled - was causing initialization crashes
